added photo to post

--- a/content/posts/june22-24.md
+++ b/content/posts/june22-24.md
@@ -40,3 +40,5 @@ script now. Progress.
 
 - Ran into a couple from OHIO on the MRT
 
+![Bodacious dinosaur miniature](Users/elliot/quickstart/static/minis.JPG)
+
