tried to figure out where to put images

--- a/content/posts/taiwanblog/june22-24.md
+++ b/content/posts/taiwanblog/june22-24.md
@@ -41,4 +41,4 @@ script now. Progress.
 - Ran into a couple from OHIO on the MRT
 
 ![Bodacious dinosaur miniature](Users/elliot/quickstart/static/minis.JPG)
-
+![sweet dino mini 2](Users/elliot/quickstart/themes/nostyleplease/images/minis2.png)
