another photo attempt

--- a/content/posts/taiwanblog/june22-24.md
+++ b/content/posts/taiwanblog/june22-24.md
@@ -42,7 +42,7 @@ script now. Progress.
 
 ![Bodacious dinosaur miniature](/images/minis.JPG)
 ![sweet dino mini 2](Users/elliot/quickstart/themes/nostyleplease/resources/_gen/images/minis.JPG)
-
+![dino mini attempt no.579](/Users/elliot/quickstart/resources/_gen/images/minis.JPG)
 <img src = Users/elliot/quickstart/themes/nostyleplease/images/minis2.png alt = "dino" width="200" height ="200">
 <img src="/static/minis.JPG" style="vertical-align:middle;margin:20px 0px"/>
 
