--- a/content/posts/taiwanblog/june22-24.md
+++ b/content/posts/taiwanblog/june22-24.md
@@ -41,9 +41,11 @@ script now. Progress.
 - Ran into a couple from OHIO on the MRT
 
 ![Bodacious dinosaur miniature](/images/minis.JPG)
+![testing2](/images/americano.png)
 ![sweet dino mini 2](/Users/elliot/quickstart/themes/nostyleplease/resources/_gen/images/minis.JPG)
 ![testing](/Users/elliot/quickstart/resources/_gen/images/americano.png)
 ![dino mini attempt no.579](/Users/elliot/quickstart/resources/_gen/images/minis.JPG)
+
 <img src = Users/elliot/quickstart/themes/nostyleplease/images/minis2.png alt = "dino" width="200" height ="200">
 <img src="/static/minis.JPG" style="vertical-align:middle;margin:20px 0px"/>
 
