added anotha photo

--- a/content/posts/taiwanblog/june22-24.md
+++ b/content/posts/taiwanblog/june22-24.md
@@ -41,4 +41,5 @@ script now. Progress.
 - Ran into a couple from OHIO on the MRT
 
 ![dino mini attempt no.579](/Users/elliot/quickstart/resources/_gen/images/minis.JPG)
+![sweet dino mini 2](/Users/elliot/quickstart/themes/nostyleplease/resources/_gen/images/minis.JPG)
 
