--- a/content/posts/taiwanblog/june22-24.md
+++ b/content/posts/taiwanblog/june22-24.md
@@ -43,3 +43,5 @@ script now. Progress.
 ![dino mini attempt no.579](/Users/elliot/quickstart/resources/_gen/images/minis.JPG)
 ![sweet dino mini 2](/Users/elliot/quickstart/themes/nostyleplease/resources/_gen/images/minis.JPG)
 
+<img src = Users/elliot/quickstart/themes/nostyleplease/images/minis2.png alt = "dino" width="200" height ="200">
+
