trying photo in 22-24.md via themes/no.../images/...

--- a/content/posts/taiwanblog/june22-24.md
+++ b/content/posts/taiwanblog/june22-24.md
@@ -40,6 +40,8 @@ script now. Progress.
 
 - Ran into a couple from OHIO on the MRT
 
+
+![Bodacious dinosaur miniature](/Users/elliot/quickstart/themes/nostyleplease/images/minis2.png)
 ![dino mini attempt no.579](/Users/elliot/quickstart/resources/_gen/images/minis.JPG)
 ![sweet dino mini 2](/Users/elliot/quickstart/themes/nostyleplease/resources/_gen/images/minis.JPG)
 
